# OWC-open-world-copilot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  面试准备.md
.claude/: launch.json
.github/workflows/: ci.yml  real-llm.yml  release.yml
.streamlit/: config.toml
deploy/: Dockerfile  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  examples.ts  graphTheme.ts  jobs.ts  pageHelp.ts  router.ts  three.d.ts  toast.ts
frontend/src/components/: CommandPalette.vue  EmptyState.vue  FilePicker.vue  Graph3D.vue  GuidedTour.vue  Modal.vue  PageHead.vue  ReadinessBoard.vue  RecognizePanel.vue  StarEmblem.vue  Starfield.vue  StepperProgress.vue  SvgGraph.vue  ToastHost.vue  ZoomCanvas.vue
frontend/src/pages/: AnalyticsPage.vue  ArchivePage.vue  AskPage.vue  AuditPage.vue  CharactersPage.vue  CompliancePage.vue  CreationPage.vue  DialoguesPage.vue  ExpandPage.vue  ExportPage.vue  ExtractionPage.vue  GenesisPage.vue  GraphPage.vue  HistoryPage.vue  ImpactPage.vue  LocalizationPage.vue  OverviewPage.vue  ReferencesPage.vue  ReviewPage.vue  SettingsPage.vue  SweepPage.vue  TableImportPage.vue  TemplatesPage.vue  TimelinePage.vue  WorkspacesPage.vue
frontend/src/styles/: tokens.css
scratchpad/: CANON_T1_research.md  CANON_T2_research.md  CANON_T3_research.md  P0_DESIGN.md  P0_G1_1_REVIEW.md  P0_G1_2a_REVIEW.md  P0_G1_2b_REVIEW.md  P0_G1_ACCEPTANCE.md  P0_G1_SUPERVISION.md  P0_G2A_REVIEW.md  P0_G2B_REVIEW.md  P0_G2C1_REVIEW.md  P0_G2C3_DESIGN.md  P0_G2C_DESIGN.md  P0_G2C_WORKPLAN.md  P0_G2_ACCEPTANCE.md  P0_G2_RESEARCH.md  P0_PROGRAM.md  P0_RESEARCH.md  R2_pm.md  R3_chaos.md  R3_engineer.md  R3_geek.md  R3_journalist.md  R3_multiagent.md  R3_pm.md  R3_rag.md  R3_writer.md  R4_chaos.md  R4_engineer.md  R4_geek.md  R4_journalist.md  R4_multiagent.md  R4_pm.md  R4_rag.md  R4_writer.md  R5_chaos.md  R5_engineer.md  R5_geek.md  R5_journalist.md  (+35 more)
scripts/: ci_gate.ps1  run_ab_benchmark.py  run_benchmark.py  run_demo.py  run_grounded_demo.py  run_milestone_demo.py  run_real_llm_round2.py  run_real_staged_world_seed.py  run_real_world_expand.py  run_real_world_seed.py  run_ue_demo.py  run_v2_golden_demo.py  run_wuyin_experiment.py
scripts/ue/: quest_copilot_helper.py
src/owcopilot/: __init__.py  ab.py  assembly.py  benchmark.py  demo.py  util.py
src/owcopilot/adapters/: base.py
src/owcopilot/agent/: __init__.py  context_compressor.py  offline.py  react.py
src/owcopilot/app/: __init__.py  _common.py  actions.py  analytics.py  dashboard.py  engine_sync.py  genesis_templates.py  view_models.py  workspaces.py
src/owcopilot/assets/: __init__.py
src/owcopilot/assist/: __init__.py  barks.py  calibration.py  (+17 more)
tests/: conftest.py  test_ab.py  test_acceptance_eval.py  test_agent_cli.py  test_agent_react.py  test_agent_step_span.py  test_app_actions.py  test_app_view_models.py  test_app_workbench_actions.py  test_assets.py  test_assist_drafts.py  test_assist_lint.py  test_audit_baseline.py  test_audit_default_rules.py  test_audit_graph_rules.py  test_audit_lore_rules.py  test_audit_pipeline_rules.py  test_audit_reference_rules.py  test_audit_region_rules.py  test_audit_registry.py  test_audit_report.py  test_audit_reputation_dialogue.py  test_audit_runner_v2.py  test_audit_security_rules.py  test_audit_trust_rules.py  test_barks.py  test_barks_flavor_refine.py  test_be_fixes.py  test_benchmark.py  test_cache.py  test_chaos_fixes.py  test_character_dialogue_refine.py  test_characters.py  test_cli.py  test_cli_loop.py  test_collab.py  test_community_detection_mode.py  test_community_index.py  test_compliance.py  test_content_ingest_v2.py  (+147 more)
(+209 files in other folders)
